deployment-oauth2-proxy.yaml
apiVersion: apps/ v1
kind: Deployment
metadata: 
  name: oauth2-proxy
  namespace: your_namespace
labels:
  app_labels
spec:
  replicas: 1
  selector:
    matchlabels:
      app: app_name
      tier: oauth2-proxy
  strategy:
    rollingUpdate:
      maxsurge: 1
      maxUnavailable: 1
  template:
    metadata:
      name: oauth2-proxy-pod
      labels:
        app: app_name
        tier: oauth2-proxy
    spec:
      containers:
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:latest
          imagepullPolicv: Always
          ports:
            - port: 4180
              protocol: TCP
              name: authport
