default-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: your_service_name
  namespace: your_namespace
spec:
  type: ClusterIP
  ports:
    - port: your_service_port
      protocol: TCP
      targetPort: 8080 #If you change this make sure nginx Listens to it
  selector:
    app: app_name
    tier: app_name_abreviation
