service-oauth2-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: your_namespace
spec:
  type: ClusterIp
  ports:
    - port: 4180
      protocol: TCP
      targetPort: 4180
  selector:
    app: app_name
    tier: oauth2-proxy
